name:                railway-market-switch
version:             0.2.0.0
synopsis:            Railway market switcher is a part of robonomics game.
-- description:
homepage:            https://github.com/airalab/railway-market-switch
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           (c) Alexander Krupenkin
category:            Aira 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable switcher
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , z21
                     , web3
                     , miku
                     , warp
                     , text
                     , queue
                     , logging
                     , transformers
  default-language:    Haskell2010
